--- a/Interchange_v2/Interchange_v2.csproj
+++ b/Interchange_v2/Interchange_v2.csproj
@@ -180,14 +180,78 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\assets\css\font-awesome.min.css" />
+    <Content Include="Content\assets\css\ie8.css" />
+    <Content Include="Content\assets\css\ie9.css" />
+    <Content Include="Content\assets\css\main.css" />
+    <Content Include="Content\assets\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\assets\js\ie\html5shiv.js" />
+    <Content Include="Content\assets\js\ie\respond.min.js" />
+    <Content Include="Content\assets\js\main.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\images\bg01.jpg" />
+    <Content Include="Content\images\bg02.jpg" />
+    <Content Include="Content\images\bg03.jpg" />
+    <Content Include="Content\images\bg04.jpg" />
+    <Content Include="Content\images\bg05.jpg" />
+    <Content Include="Content\images\bg06.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\assets\.sass-cache\3e2984aa8dc687413fe04d07a56864b0bc352e02\_bg.scssc" />
+    <Content Include="Content\assets\.sass-cache\3e2984aa8dc687413fe04d07a56864b0bc352e02\_page.scssc" />
+    <Content Include="Content\assets\.sass-cache\3e2984aa8dc687413fe04d07a56864b0bc352e02\_typography.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_banner.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_bg.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_footer.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_header.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_main.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_nav.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_notify-form.scssc" />
+    <Content Include="Content\assets\.sass-cache\416ef32e70133cd421b96ba452eb2ac786ea0d19\_signup-form.scssc" />
+    <Content Include="Content\assets\.sass-cache\87a8ff9934eeff440c9c0c2118f6f51e865bd172\ie8.scssc" />
+    <Content Include="Content\assets\.sass-cache\87a8ff9934eeff440c9c0c2118f6f51e865bd172\ie9.scssc" />
+    <Content Include="Content\assets\.sass-cache\87a8ff9934eeff440c9c0c2118f6f51e865bd172\main.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_box.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_button.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_form.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_grid-demo.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_icon.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_image.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_list.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_section.scssc" />
+    <Content Include="Content\assets\.sass-cache\920148cb95073097b1ecc72cb5d5b888545b9cc7\_table.scssc" />
+    <Content Include="Content\assets\.sass-cache\a365a03aed6ff283a23b9df8af64a59cd9d80f02\_functions.scssc" />
+    <Content Include="Content\assets\.sass-cache\a365a03aed6ff283a23b9df8af64a59cd9d80f02\_mixins.scssc" />
+    <Content Include="Content\assets\.sass-cache\a365a03aed6ff283a23b9df8af64a59cd9d80f02\_skel.scssc" />
+    <Content Include="Content\assets\.sass-cache\a365a03aed6ff283a23b9df8af64a59cd9d80f02\_vars.scssc" />
+    <Content Include="Content\assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\assets\fonts\FontAwesome.otf" />
+    <Content Include="Content\assets\sass\base\_bg.scss" />
+    <Content Include="Content\assets\sass\base\_page.scss" />
+    <Content Include="Content\assets\sass\base\_typography.scss" />
+    <Content Include="Content\assets\sass\components\_button.scss" />
+    <Content Include="Content\assets\sass\components\_form.scss" />
+    <Content Include="Content\assets\sass\components\_icon.scss" />
+    <Content Include="Content\assets\sass\components\_list.scss" />
+    <Content Include="Content\assets\sass\components\_section.scss" />
+    <Content Include="Content\assets\sass\ie8.scss" />
+    <Content Include="Content\assets\sass\ie9.scss" />
+    <Content Include="Content\assets\sass\layout\_footer.scss" />
+    <Content Include="Content\assets\sass\layout\_header.scss" />
+    <Content Include="Content\assets\sass\layout\_signup-form.scss" />
+    <Content Include="Content\assets\sass\libs\_functions.scss" />
+    <Content Include="Content\assets\sass\libs\_mixins.scss" />
+    <Content Include="Content\assets\sass\libs\_skel.scss" />
+    <Content Include="Content\assets\sass\libs\_vars.scss" />
+    <Content Include="Content\assets\sass\main.scss" />
     <None Include="Properties\PublishProfiles\Interchangev2.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -201,6 +265,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="StyleSheet1.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
